--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
-<head>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Hello !</h1>
-</body>
+<div class="dice_title">
+  <h2>WHAT TO EAT?</h2>
+  <button type="button" class="dice_slot" id="food_button" onClick="GetResults(food_results, this.id)">
+    <p id="food_text">-</p>
+  </button>
+</div>
+<div class="dice_title">
+  <h2>WHAT TO DO?</h2>
+  <button type="button" class="dice_slot" id="do_button" onClick="GetResults(do_results, this.id)">
+    <p id="do_text">-</p>
+  </button>
+</div>
+<div class="dice_title">
+  <h2>AFTER THAT?</h2>
+  <button type="button" class="dice_slot" id="after_button" onClick="GetResults(after_results, this.id)">
+    <p id="after_text">-</p>
+  </button>
+</div>
+<div class="dice_title">
+  <h2>SEXY TIME</h2>
+  <button type="button" class="dice_slot" id="sexy_button" onClick="GetResults(sexy_results, this.id)">
+    <p id="sexy_text">-</p>
+  </button>
+</div>
 
