--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
 </head>
 <body>
   <div class="dice_title">
